kubernetes/ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "mlflow-wtd-io-ingress"
  namespace: "mlflow-wtd-io"
spec:
  rules:
    - host: "mlflow.wtd.io"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "mlflow-wtd-io-service"
                port:
                  number: 80
...
